packages/build/tests/error/fixtures/early_exit/plugin.js
module.exports = {
  onPreBuild() {
    process.env.TEST_PID = process.pid
  },
  onPostBuild() {},
}
